--- a/TicketsControl/tickets/templates/base.html
+++ b/TicketsControl/tickets/templates/base.html
@@ -8,6 +8,7 @@
     <title>Registro Usuario</title>
     {% load bootstrap5 %}
     {% bootstrap_css %}
+    <link rel="shortcut icon" href="#" />
     <link rel='stylesheet' href="https://cdn.datatables.net/1.13.4/css/dataTables.bootstrap5.min.css">
     <link rel='stylesheet' href="{% static 'css/styles.css' %}">
     <link rel='stylesheet' href="{% static 'css/font-uia.css' %}">
