--- a/TicketsControl/tickets/templates/encuestas/registro_agente.html
+++ b/TicketsControl/tickets/templates/encuestas/registro_agente.html
@@ -4,8 +4,8 @@
 {% load static %}
 <div class="p-2">
     <div class="row">
-        <div class="col-12 col-sm-12 col-md-9 col-lg-5 mx-auto mt-5">
-            <div class="card border-0 cardCol rounded-3 mx-auto">
+        <div class="col-12 mx-auto mt-5">
+            <div class="card border-0 cardCol rounded-3 mx-auto" style="width: 35rem;">
                 <div class="card-body p-sm-5">
                     <h5 class="card-title text-center mb-5 fw-light fs-3 fw-bold" style="color: #000000;">REGISTRO DE ENCUESTA</h5>
                     <main class="">
