--- a/tickets/templates/visualizador/ticket_control.html
+++ b/tickets/templates/visualizador/ticket_control.html
@@ -59,7 +59,7 @@
                                 {% if record.codigoCaso|length > 7 %}
                                 <h1 class="mt-3 mb-3 fw-bold" style="font-size: 52px;">{{ record.codigoCaso }}</h1>
                                 {% else %}
-                                <h1 class="display-4 mt-3 mb-3 fw-bold">{{ record.codigoCaso }}</h1>
+                                <h1 class="mt-3 mb-3 fw-bold" style="font-size: 52px;">{{ record.codigoCaso }}</h1>
                                 {% endif %}
                                     
                             </td>
@@ -70,7 +70,7 @@
                                 {% if record.codigoCaso|length > 3 %}
                                 <h1 class="mt-3 mb-3 fw-bold" style="font-size: 52px;">&nbsp{{ record.departamento }}&nbsp</h1>
                                 {% else %}
-                                <h1 class="display-4 mt-3 mb-3 fw-bold">&nbsp{{ record.departamento }}&nbsp</h1>
+                                <h1 class="mt-3 mb-3 fw-bold" style="font-size: 52px;">&nbsp{{ record.departamento }}&nbsp</h1>
                                 {% endif %}
                                 
                             </td>
